--- a/notebooks/01_data_collection.ipynb
+++ b/notebooks/01_data_collection.ipynb
@@ -2,12 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from google_play_scraper import Sort, reviews"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.0 Data Collection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We aim to collect [Genshin Impact app](https://play.google.com/store/apps/details?id=com.miHoYo.GenshinImpact&hl=en&gl=my) ratings on Google Play with a star rating and review. The ratings are on a 5-point scale, with 1 being the lowest score and 5 being the highest score one could possibly give. Since the goal of our project is to predict if a review has a positive or negative sentiment based on textual data, we will scrape real user reviews on Google Play.\n",
+    "\n",
+    "Here we employ the [Google-Play-Scraper](https://github.com/JoMingyu/google-play-scraper), which provides an API to crawl through Google Play.\n",
+    "\n",
+    "The reviews were collected in batches, according to their scores (1-5). This was done in an attempt to achieve a balanced dataset with roughly the same number of reviews for each score. Also, in order to gather reviews that had more text and were written recently, we set up the google play scraper to scrape from both review types, 'Most relevant' and 'Newest' (which **may result in duplicate reviews** but we'll handle them later)."
    ]
   },
   {
@@ -249,7 +267,7 @@
     }
    ],
    "source": [
-    "# check for duplicates\n",
+    "# check for duplicates since we scraped from the 'Most relevant' and 'Newest' sections (which may have a lot of overlapping ratings)\n",
     "df_temp.duplicated(subset=['reviewId']).value_counts()"
    ]
   },
@@ -298,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +539,7 @@
        "4  5.1.0_27118081_27297621  most_relevant  com.miHoYo.GenshinImpact  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
