put utility functions in `faiq_utils.py`

--- a/notebooks/02_eda_and_preprocessing.ipynb
+++ b/notebooks/02_eda_and_preprocessing.ipynb
@@ -29,138 +29,10 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "from faiq_utils import subplot_histograms, plot_wordcloud, \\\n",
+    "                       barplot_cvec\n",
+    "\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def subplot_histograms(\n",
-    "        df: pd.DataFrame,\n",
-    "        main_title: str,\n",
-    "        list_of_titles: List[str],\n",
-    "        xlabels,\n",
-    "        list_of_colors: List[str]\n",
-    "    ):\n",
-    "    \"\"\"\n",
-    "    This creates histogram subplots for each rating (1-5).\n",
-    "    Each subplot represents the distribution of the dates at which the reviews were written.\n",
-    "\n",
-    "    ### Arguments\n",
-    "    - `df`: The input dataframe. It must have a `score` and `at` column.\n",
-    "    - `main_title`: The title of the chart generated.\n",
-    "    - `list_of_titles`: A list of titles e.g., '4-Star Rating','5-Star Rating', etc.\n",
-    "    - `xlabels`: The x-axis label of the chart.\n",
-    "    - `list_of_colors`: A list of color palette codes to use.\n",
-    "    \"\"\"\n",
-    "    df = df.copy() # best practice to ensure we don't alter the original dataframe\n",
-    "\n",
-    "    fig, ax = plt.subplots(5, 1, figsize=(8,10), sharex=True, sharey=True)\n",
-    "    for i in range(5):\n",
-    "        ax[i].hist(df[df['score']==(i+1)]['at'], bins=50, color=list_of_colors[i])\n",
-    "        ax[i].set_title(list_of_titles[i], weight='bold')\n",
-    "        ax[i].set_xlabel(xlabels)\n",
-    "        ax[i].set_ylabel('Frequency')\n",
-    "    fig.suptitle(main_title, fontsize=15, weight='bold')\n",
-    "    fig.tight_layout()\n",
-    "    fig.subplots_adjust(top=0.9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_wordcloud(\n",
-    "        target: int,\n",
-    "        title: str,\n",
-    "        df: pd.DataFrame,\n",
-    "        text_col_in_df: str,\n",
-    "        max_words: int = 50,\n",
-    "    ):\n",
-    "    \"\"\"\n",
-    "    This is a function to plot a wordcloud of the most frequently occurring \n",
-    "    words based on whether the review is negative (1) or positive (0).\n",
-    "\n",
-    "    ### Arguments\n",
-    "    - `target`: Whether the review is negative (1) or positive (0).\n",
-    "    - `title`: The title of the WordCloud chart generated.\n",
-    "    - `df`: The input dataframe. It must have a `content` column.\n",
-    "    - `text_col_in_df`: The text column in the input dataframe.\n",
-    "    - `max_words`: The maximum no. of words in the wordcloud.\n",
-    "    \"\"\"\n",
-    "    df = df.copy() # best practice to ensure we don't alter the original dataframe\n",
-    "    \n",
-    "    text = df[df['target']==target][text_col_in_df] \n",
-    "\n",
-    "    wordcloud = WordCloud(width=2000, \n",
-    "                          height=1000, \n",
-    "                          background_color='white', \n",
-    "                          max_words=max_words,\n",
-    "                          stopwords=STOPWORDS\n",
-    "                ).generate(' '.join(text)) # Remove stopwords\n",
-    "    \n",
-    "    plt.figure(figsize=(10,8))\n",
-    "    plt.title(title, fontsize=15, weight='bold')\n",
-    "    plt.imshow(wordcloud, interpolation='bilinear')\n",
-    "    plt.axis('off') # Removes the axis\n",
-    "    plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def barplot_cvec(\n",
-    "        df: pd.DataFrame,\n",
-    "        target: int,\n",
-    "        titles: List[str],\n",
-    "        color: str,\n",
-    "        xlimit: Tuple[int, int]\n",
-    "    ):\n",
-    "    \"\"\"\n",
-    "    Plots top 20 uni-grams and bi-grams for positive and negative reviews.\n",
-    "    \n",
-    "    ### Arguments\n",
-    "    - `df`: The input dataframe\n",
-    "    - `target`: Whether the review is negative (1) or positive (0).\n",
-    "    - `title`: A list of titles \n",
-    "    - `color`: Color palette to use for charts.\n",
-    "    - `xlimit`: Horizontal axis limits\n",
-    "    \"\"\"\n",
-    "    df = df.copy() # best practice to ensure we don't alter the original dataframe\n",
-    "    \n",
-    "    words_series = df[df['target']==target]['content_stem']\n",
-    "    \n",
-    "    fig, ax = plt.subplots(1, 2, figsize=(25,12))\n",
-    "    \n",
-    "    ngram = [(1,1),(2,2)] # The ngrams that we would like to plot\n",
-    "    \n",
-    "    for i in range(2):\n",
-    "            \n",
-    "        # Use CountVectorizer to tokenize the text, \n",
-    "        cvec = CountVectorizer(stop_words='english', ngram_range=ngram[i])\n",
-    "\n",
-    "        # Save the tokens in a dataframe\n",
-    "        cvec_df = pd.DataFrame(cvec.fit_transform(words_series).todense(), columns=cvec.get_feature_names_out())\n",
-    "        sum_words = cvec_df.sum(axis=0) # Sum up the no. of occurences for each word\n",
-    "        top_words = sum_words.sort_values(ascending=False).head(20)\n",
-    "        top_words.sort_values(ascending=True).plot(kind='barh', color=color, ax=ax[i])\n",
-    "\n",
-    "        # Adjust plot aesthetics\n",
-    "        ax[i].set_title(titles[i], size=25, weight='bold')\n",
-    "        ax[i].set_xlabel('Count', size=20)\n",
-    "        ax[i].set_xlim(xlimit) # Setting a limit so that the barplots are comparable\n",
-    "        ax[i].tick_params(axis='both', which='major', labelsize=20)\n",
-    "        ax[i].tick_params(axis='both', which='minor', labelsize=20)\n",
-    "\n",
-    "    plt.tight_layout()"
    ]
   },
   {
