documentation for modeling notebook

--- a/notebooks/03_modeling_stemmed.ipynb
+++ b/notebooks/03_modeling_stemmed.ipynb
@@ -1,8 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook details our approach for building a sentiment classifier for Genshin Impact reviews. We employ several algorithms across classical machine learning as well as deep learning. We used MLflow to track our evaluation metrics and the results and comparisons can be found in this [DagsHub link](https://dagshub.com/wanadzhar913/genshin-impact-reviews-sentiment-analysis-fastapi-docker.mlflow/#/compare-runs?runs=[%221cf48d4a88fa40f6b61fa02c2236d9d0%22,%22e24f21f8390a46f7b78f5fc679f9f53d%22,%22636046f0cab54aaab2198516355bd8ea%22,%22029da21ba99e4d00b61c7dc56b384d49%22,%224208a7b71def45d692fc1d2a1f26207d%22,%228ecbff288974468c8c6197dd91e9ebc3%22,%2252d9cc319f8b4072934d2ae25424f55f%22,%2279363a6b65b64c2cbd8446bf92e62a25%22,%225264f1d5ccea4ae9af208196d7095172%22]&experiments=[%221%22]).\n",
+    "\n",
+    "For completeness, our results can also be found below:\n",
+    "\n",
+    "| Models         | Accuracy           | F1-Score        | Precision       | Recall          |\n",
+    "|----------------|--------------------|-----------------|-----------------|-----------------|\n",
+    "| Count Vectorizer & SVC| 0.74               | 0.71            | 0.74            | 0.71            |\n",
+    "| Count Vectorizer & Logistic Regression   | 0.74               | 0.71            | 0.73            | 0.71            |\n",
+    "| PyTorch LSTM-RNN| 0.73               | 0.71            | 0.72            | 0.70            |\n",
+    "| TF-IDF Vectorizer & Naive Bayes| 0.74               | 0.71            | 0.74            | 0.70            |\n",
+    "| Count Vectorizer & Naive Bayes| 0.72               | 0.70            | 0.71            | 0.70            |\n",
+    "| Voting Classifier   | 0.72               | 0.70            | 0.71            | 0.70            |\n",
+    "| Count Vectorizer & XgbClassifier| 0.73               | 0.70            | 0.72            | 0.69            |\n",
+    "| TF-IDF Vectorizer & Logistic Regression   | 0.73               | 0.70            | 0.73            | 0.69            |\n",
+    "| TF-IDF Vectorizer & XgbClassifier| 0.73               | 0.70            | 0.72            | 0.69            |\n",
+    "| TF-IDF Vectorizer & SVC| 0.73               | 0.68            | 0.76            | 0.68            |\n",
+    "\n",
+    "\n",
+    "Overall, our best model (based on Recall & Accuracy) is a Count Vectorizer & Support Vector Classifier.\n",
+    "\n",
+    "In the future, we can further experiment with:\n",
+    "- Probability threshold-tuning because we notice a bias for the model to predict the negative (1) class. This makes sense as the polarity of a review may not be so straightforward. For example, a person can give Genshin Impact praise but still leave some criticism at the end.\n",
+    "- We can also remove reviews with 3-stars from the dataset due to them being more neutral. This can avoid confusing the model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1602,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1612,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1622,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2474,23 +2503,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.5 Inference Test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = SentimentRNN(\n",
-    "#     no_layers = 2,\n",
-    "#     vocab_size = 1502,\n",
-    "#     output_dim = 1,\n",
-    "#     hidden_dim = 256,\n",
-    "#     embedding_dim = 64,\n",
-    "#     drop_prob=0.6\n",
-    "# )\n",
+    "# Load the vocab dictionary from the pickle file\n",
+    "with open('../models/pytorch_vocab.pkl', 'rb') as f:\n",
+    "    vocab = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SentimentRNN(nn.Module):\n",
+    "    def __init__(self,\n",
+    "            no_layers,\n",
+    "            vocab_size,\n",
+    "            output_dim,\n",
+    "            hidden_dim,\n",
+    "            embedding_dim,\n",
+    "            drop_prob=0.5,\n",
+    "        ):\n",
+    "        super(SentimentRNN,self).__init__()\n",
     "\n",
-    "# model.load_state_dict(torch.load('..models/rnn_pytorch_stem_v20241117.pth'))\n",
+    "        self.output_dim = output_dim\n",
+    "        self.hidden_dim = hidden_dim\n",
     "\n",
-    "# model.eval().cuda()"
+    "        self.no_layers = no_layers\n",
+    "        self.vocab_size = vocab_size\n",
+    "\n",
+    "        # embedding and LSTM layers\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "\n",
+    "        # lstm\n",
+    "        self.lstm = nn.LSTM(input_size=embedding_dim,hidden_size=self.hidden_dim, num_layers=no_layers, batch_first=True)\n",
+    "\n",
+    "        # dropout layer\n",
+    "        self.dropout = nn.Dropout(drop_prob)\n",
+    "\n",
+    "        # linear and sigmoid layer\n",
+    "        self.fc = nn.Linear(self.hidden_dim, output_dim)\n",
+    "        self.sig = nn.Sigmoid()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        batch_size = x.size(0)\n",
+    "\n",
+    "        # initialize hidden state\n",
+    "        hidden = self.init_hidden(batch_size)\n",
+    "\n",
+    "        # embeddings and lstm_out\n",
+    "        embeds = self.embedding(x)  # shape: B x S x Feature   since batch = True\n",
+    "\n",
+    "        # print(embeds.shape)  # e.g., [50, 500, 1000]\n",
+    "        lstm_out, hidden = self.lstm(embeds, hidden)\n",
+    "\n",
+    "        lstm_out = lstm_out.contiguous().view(-1, self.hidden_dim) \n",
+    "\n",
+    "        # dropout and fully connected layer\n",
+    "        out = self.dropout(lstm_out)\n",
+    "        out = self.fc(out)\n",
+    "\n",
+    "        # sigmoid function\n",
+    "        sig_out = self.sig(out)\n",
+    "\n",
+    "        # reshape to be batch_size first\n",
+    "        sig_out = sig_out.view(batch_size, -1)\n",
+    "\n",
+    "        # get last batch of labels\n",
+    "        sig_out = sig_out[:, -1]\n",
+    "\n",
+    "        # return last sigmoid output and hidden state\n",
+    "        return sig_out, hidden\n",
+    "\n",
+    "    def init_hidden(self, batch_size):\n",
+    "        '''\n",
+    "        Initializes hidden state: https://discuss.pytorch.org/t/how-to-handle-last-batch-in-lstm-hidden-state/40858\n",
+    "        '''\n",
+    "        # Create two new tensors with sizes n_layers x batch_size x hidden_dim,\n",
+    "        # initialized to zero, for hidden state and cell state of LSTM\n",
+    "        h0 = torch.zeros((self.no_layers, batch_size, self.hidden_dim)).to('cuda:0')\n",
+    "        c0 = torch.zeros((self.no_layers, batch_size, self.hidden_dim)).to('cuda:0')\n",
+    "        \n",
+    "        hidden = (h0,c0)\n",
+    "\n",
+    "        return hidden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_32336/2093309571.py:10: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model.load_state_dict(torch.load('../models/rnn_pytorch_stem_v20241117.pth'))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SentimentRNN(\n",
+       "  (embedding): Embedding(1502, 64)\n",
+       "  (lstm): LSTM(64, 256, num_layers=2, batch_first=True)\n",
+       "  (dropout): Dropout(p=0.6, inplace=False)\n",
+       "  (fc): Linear(in_features=256, out_features=1, bias=True)\n",
+       "  (sig): Sigmoid()\n",
+       ")"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = SentimentRNN(\n",
+    "    no_layers = 2,\n",
+    "    vocab_size = 1502,\n",
+    "    output_dim = 1,\n",
+    "    hidden_dim = 256,\n",
+    "    embedding_dim = 64,\n",
+    "    drop_prob=0.6\n",
+    ")\n",
+    "\n",
+    "model.load_state_dict(torch.load('../models/rnn_pytorch_stem_v20241117.pth'))\n",
+    "\n",
+    "model.eval().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tokenizer function\n",
+    "_patterns = [r\"\\'\", r\"\\\"\", r\"\\.\", r\"<br \\/>\", r\",\", r\"\\(\", r\"\\)\", r\"\\!\", r\"\\?\", r\"\\;\", r\"\\:\", r\"\\s+\"]\n",
+    "_replacements = [\" '  \", \"\", \" . \", \" \", \" , \", \" ( \", \" ) \", \" ! \", \" ? \", \" \", \" \", \" \"]\n",
+    "_patterns_dict = list((re.compile(p), r) for p, r in zip(_patterns, _replacements))\n",
+    "\n",
+    "def get_tokenizer(line):\n",
+    "    line = line.lower()\n",
+    "    for pattern_re, replaced_str in _patterns_dict:\n",
+    "        line = pattern_re.sub(replaced_str, line)\n",
+    "    return line.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rating: 3, class: 1 (negative)\n",
+    "stemmed_text = \"uh download long took hour delet wanna scaramouch download long got impati yeah give wait,3,1\"\n",
+    "\n",
+    "tokens = get_tokenizer(stemmed_text)\n",
+    "numerical_tokens = [vocab.get(token, vocab['<unk>']) for token in tokens]\n",
+    "input_tensor = torch.tensor([numerical_tokens], dtype=torch.long).to(\"cuda:0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    output, _ = model(input_tensor)\n",
+    "\n",
+    "    sentiment = torch.round(output.squeeze()).cpu().detach() \\\n",
+    "                                             .int().numpy()\n",
+    "\n",
+    "    print(sentiment)"
    ]
   }
  ],
