remove redundant tokenizer function

--- a/notebooks/03_modeling_stemmed.ipynb
+++ b/notebooks/03_modeling_stemmed.ipynb
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,65 +1735,17 @@
     "> `from torchtext.data.utils import get_tokenizer`    \n",
     "> `from torchtext.vocab import build_vocab_from_iterator`\n",
     "\n",
-    "We get the below `get_tokenizer()` from this section in their GitHub: https://github.com/pytorch/text/blob/main/torchtext/data/utils.py"
+    "Since we've already cleaned and pre-processed our dataset e.g., lowercasing, stemming, etc. **we won't have to reimplement the** `get_tokenizer()` **function** from this section in their GitHub: https://github.com/pytorch/text/blob/main/torchtext/data/utils.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_patterns = [r\"\\'\", r\"\\\"\", r\"\\.\", r\"<br \\/>\", r\",\", r\"\\(\", r\"\\)\", r\"\\!\", r\"\\?\", r\"\\;\", r\"\\:\", r\"\\s+\"]\n",
-    "\n",
-    "_replacements = [\" '  \", \"\", \" . \", \" \", \" , \", \" ( \", \" ) \", \" ! \", \" ? \", \" \", \" \", \" \"]\n",
-    "\n",
-    "_patterns_dict = list((re.compile(p), r) for p, r in zip(_patterns, _replacements))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_tokenizer(line: str) -> List[str]:\n",
-    "    r\"\"\"\n",
-    "    Basic normalization for a line of text.\n",
-    "    Normalization includes\n",
-    "    - lowercasing\n",
-    "    - complete some basic text normalization for English words as follows:\n",
-    "        add spaces before and after '\\''\n",
-    "        remove '\\\"',\n",
-    "        add spaces before and after '.'\n",
-    "        replace '<br \\/>'with single space\n",
-    "        add spaces before and after ','\n",
-    "        add spaces before and after '('\n",
-    "        add spaces before and after ')'\n",
-    "        add spaces before and after '!'\n",
-    "        add spaces before and after '?'\n",
-    "        replace ';' with single space\n",
-    "        replace ':' with single space\n",
-    "        replace multiple spaces with single space\n",
-    "\n",
-    "    Returns a list of tokens after splitting on whitespace.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    line = line.lower()\n",
-    "    for pattern_re, replaced_str in _patterns_dict:\n",
-    "        line = pattern_re.sub(replaced_str, line)\n",
-    "    return line.split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tokenize the data\n",
-    "X_train_tokens = [get_tokenizer(text) for text in X_train]\n",
-    "X_val_tokens = [get_tokenizer(text) for text in X_test]"
+    "X_train_tokens = [text.split() for text in X_train]\n",
+    "X_val_tokens = [text.split() for text in X_test]"
    ]
   },
   {
@@ -1902,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,7 +1879,7 @@
     "        \n",
     "        # Convert \"content_stem\" to numerical tokens using the vocabulary\n",
     "        # Assuming content is a string of space-separated tokens\n",
-    "        tokens = [get_tokenizer(text)[0] for text in content.split()]\n",
+    "        tokens = [text.split()[0] for text in content.split()]\n",
     "        numerical_tokens = [self.vocab.get(token, self.vocab['<unk>']) for token in tokens]\n",
     "        \n",
     "        return torch.tensor(numerical_tokens, dtype=torch.int), target"
