add documentation `03_modeling_stemmed.ipynb`

--- a/notebooks/03_modeling_stemmed.ipynb
+++ b/notebooks/03_modeling_stemmed.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook details our approach for building a sentiment classifier for Genshin Impact reviews. We employ several algorithms across classical machine learning and deep learning. We used MLflow to track our evaluation metrics and the results and comparisons can be found in this [DagsHub link](https://dagshub.com/wanadzhar913/genshin-impact-reviews-sentiment-analysis-fastapi-docker.mlflow/#/experiments/1?searchFilter=&orderByKey=metrics.%60Recall%60&orderByAsc=false&startTime=ALL&lifecycleFilter=Active&modelVersionFilter=All+Runs&datasetsFilter=W10%3D).\n",
+    "This notebook details **our approach for building a sentiment classifier for Genshin Impact reviews.** We employ several algorithms across classical machine learning and deep learning. We used **MLflow** to track our evaluation metrics and the results and comparisons can be found in this [DagsHub link](https://dagshub.com/wanadzhar913/genshin-impact-reviews-sentiment-analysis-fastapi-docker.mlflow/#/experiments/1?searchFilter=&orderByKey=metrics.%60Recall%60&orderByAsc=false&startTime=ALL&lifecycleFilter=Active&modelVersionFilter=All+Runs&datasetsFilter=W10%3D).\n",
     "\n",
     "For completeness, our results can also be found below:\n",
     "\n",
@@ -23,10 +23,10 @@
     "| PyTorch LSTM-RNN (Word2Vec)|       0.70         |      0.66       |      0.69      |       0.66    |\n",
     "\n",
     "\n",
-    "Overall, our best model (based on Recall & Accuracy) is a Count Vectorizer & Support Vector Classifier.\n",
+    "Overall, our best model (based on Recall & Accuracy) is a **PyTorch LSTM-RNN (Corpus Embedding)**.\n",
     "\n",
     "In the future, we can further experiment with:\n",
-    "- Probability threshold-tuning because we notice a bias for the model to predict the negative (1) class. This makes sense as the polarity of a review may not be so straightforward. For example, a person can give Genshin Impact praise but still leave some criticism at the end.\n",
+    "- Probability threshold-tuning (for classical machine learning) because we notice a bias for our models to predict the negative (1) class. This makes sense as the polarity of a review may not be so straightforward. For example, a person can give Genshin Impact praise but still leave some criticism at the end.\n",
     "- We can also remove reviews with 3-stars from the dataset due to them being more neutral. This can avoid confusing the model."
    ]
   },
