--- a/notebooks/03_modeling_stemmed.ipynb
+++ b/notebooks/03_modeling_stemmed.ipynb
@@ -6,11 +6,12 @@
    "source": [
     "This notebook details **our approach for building a sentiment classifier for Genshin Impact reviews.** We employ several algorithms across classical machine learning and deep learning. We used **MLflow** to track our evaluation metrics and the results and comparisons can be found in this [DagsHub link](https://dagshub.com/wanadzhar913/genshin-impact-reviews-sentiment-analysis-fastapi-docker.mlflow/#/experiments/1?searchFilter=&orderByKey=metrics.%60Recall%60&orderByAsc=false&startTime=ALL&lifecycleFilter=Active&modelVersionFilter=All+Runs&datasetsFilter=W10%3D).\n",
     "\n",
-    "For completeness, our results can also be found below:\n",
+    "For completeness, our results for the **Validation Set** can also be found below:\n",
     "\n",
     "| Models         | Accuracy           | F1-Score        | Precision       | Recall          |\n",
     "|----------------|--------------------|-----------------|-----------------|-----------------|\n",
     "| PyTorch LSTM-RNN (Corpus Embedding)|     0.74         |       0.72      |      0.73      |     0.72       |\n",
+    "| PyTorch Bi-Directional LSTM (Corpus Embedding)|     0.74         |       0.72      |      0.73      |     0.72       |\n",
     "| Count Vectorizer & SVC| 0.74               | 0.71            | 0.74            | 0.71            |\n",
     "| Count Vectorizer & Logistic Regression   | 0.74               | 0.71            | 0.73            | 0.71            |\n",
     "| TF-IDF Vectorizer & Naive Bayes| 0.74               | 0.71            | 0.74            | 0.70            |\n",
@@ -20,14 +21,16 @@
     "| TF-IDF Vectorizer & Logistic Regression   | 0.73               | 0.70            | 0.73            | 0.69            |\n",
     "| TF-IDF Vectorizer & XgbClassifier| 0.73               | 0.70            | 0.72            | 0.69            |\n",
     "| TF-IDF Vectorizer & SVC| 0.73               | 0.68            | 0.76            | 0.68            |\n",
+    "| PyTorch Bi-Directional LSTM (Word2Vec)|     0.70        |       0.68      |      0.69     |     0.67      |\n",
     "| PyTorch LSTM-RNN (Word2Vec)|       0.70         |      0.66       |      0.69      |       0.66    |\n",
     "\n",
     "\n",
-    "Overall, our best model (based on Recall & Accuracy) is a **PyTorch LSTM-RNN (Corpus Embedding)**.\n",
+    "Overall, our best model (based on Recall & Accuracy) is a **PyTorch LSTM-RNN (Corpus Embedding)**. However, we do note that it has a very high scores on the Training Set (92% Accuracy & 91% Recall) which may indicate overfitting. Nonetheless, the 70+% scores on both Recall and Accuracy for the Validation Set still indicate that the model generalizes reasonably well to unseen data, despite potential signs of overfitting.\n",
     "\n",
     "In the future, we can further experiment with:\n",
-    "- Probability threshold-tuning (for classical machine learning) because we notice a bias for our models to predict the negative (1) class. This makes sense as the polarity of a review may not be so straightforward. For example, a person can give Genshin Impact praise but still leave some criticism at the end.\n",
-    "- We can also remove reviews with 3-stars from the dataset due to them being more neutral. This can avoid confusing the model."
+    "- **Probability threshold-tuning** (for classical machine learning) because we notice a bias for our models to predict the negative (1) class. This makes sense as the polarity of a review may not be so straightforward. For example, a person can give Genshin Impact praise but still leave some criticism at the end.\n",
+    "- For deep learning, **further tuning of hyperparameters or regularization techniques** e.g., learning rate scheduling, truncation and setting a max sequence length, etc. might be explored to address this and improve performance further. During the training loop, we could add gradient clipping in our optimizer because this prevents spikes in the gradients to mess up the parameters during training. Gradient Clipping is a technique to prevent exploding gradients in very deep networks, typically Recurrent Neural Networks.\n",
+    "- Data-wise, we can also **remove reviews with 3-stars from the dataset due to them being more likely neutral.** This can avoid confusing the model."
    ]
   },
   {
