--- a/notebooks/03_modeling_stemmed_part2.ipynb
+++ b/notebooks/03_modeling_stemmed_part2.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we **train 2 additional PyTorch models utilizing the Bi-directional LSTM architecture.** The benefit of Bi-LSTM is that it **captures not only the context that comes before a specific time step (as in traditional RNNs) but also the context that follows.** By considering both past and future information, Bi-LSTM can capture richer dependencies in the input sequence making them well-suited for text classification and sentiment analysis because language often relies on contextual dependencies that span both before and after a given word in a sentence."
+    "In this notebook, we **train 2 additional PyTorch models utilizing the Bi-directional LSTM architecture.** The benefit of Bi-LSTM is that it **captures not only the context that comes before a specific time step (as in traditional RNNs) but also the context that follows.** By considering both past and future information, Bi-LSTM can capture richer dependencies in the input sequence making them well-suited for text classification and sentiment analysis because language often relies on contextual dependencies that span both before and after a given word in a sentence.\n",
+    "\n",
+    "However, we notice several spikes in our training loss and dips in accuracy during our training loop which may require additional investigation in the future."
    ]
   },
   {
