--- a/notebooks/03_modeling_stemmed.ipynb
+++ b/notebooks/03_modeling_stemmed.ipynb
@@ -25,11 +25,11 @@
     "| PyTorch LSTM-RNN (Word2Vec)|       0.70         |      0.66       |      0.69      |       0.66    |\n",
     "\n",
     "\n",
-    "Overall, our best model (based on Recall & Accuracy) is a **PyTorch LSTM-RNN (Corpus Embedding)**. However, we do note that it has a very high scores on the Training Set (92% Accuracy & 91% Recall) which may indicate overfitting. Nonetheless, the 70+% scores on both Recall and Accuracy for the Validation Set still indicate that the model generalizes reasonably well to unseen data, despite potential signs of overfitting.\n",
+    "Overall, our best model (based on Recall & Accuracy) is the **PyTorch LSTM-RNN (Corpus Embedding)** and we will be taking it to production. However, we do note that it has a very high scores on the Training Set (92% Accuracy & 91% Recall) which may indicate overfitting. Nonetheless, the 70+% scores on both Recall and Accuracy for the Validation Set still indicate that the model generalizes reasonably well to unseen data, despite signs of overfitting.\n",
     "\n",
     "In the future, we can further experiment with:\n",
     "- **Probability threshold-tuning** (for classical machine learning) because we notice a bias for our models to predict the negative (1) class. This makes sense as the polarity of a review may not be so straightforward. For example, a person can give Genshin Impact praise but still leave some criticism at the end.\n",
-    "- For deep learning, **further tuning of hyperparameters or regularization techniques** e.g., learning rate scheduling, truncation and setting a max sequence length, etc. might be explored to address this and improve performance further. During the training loop, we could add gradient clipping in our optimizer because this prevents spikes in the gradients to mess up the parameters during training. Gradient Clipping is a technique to prevent exploding gradients in very deep networks, typically Recurrent Neural Networks.\n",
+    "- For deep learning, **further tuning of hyperparameters or regularization techniques** e.g., dynamic learning rate scheduling upon plateaus, truncation and setting a max sequence length, etc. might be explored to address this and improve performance further. In the case of our Bi-Directional LSTM, during the training loop, we could add gradient clipping in our optimizer because this prevents spikes in the gradients to mess up the parameters during training. Gradient Clipping is a technique to prevent exploding gradients in very deep networks, typically Recurrent Neural Networks.\n",
     "- Data-wise, we can also **remove reviews with 3-stars from the dataset due to them being more likely neutral.** This can avoid confusing the model."
    ]
   },
