clean up packages in topic modeling notebook

--- a/notebooks/05_topic_modeling_negative_reviews.ipynb
+++ b/notebooks/05_topic_modeling_negative_reviews.ipynb
@@ -13,34 +13,21 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.colors as mcolors\n",
     "import seaborn as sns\n",
     "\n",
-    "# Libraries for classical machine learning\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.ensemble import VotingClassifier\n",
-    "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
-    "\n",
     "# Libraries for topic modeling\n",
-    "from pprint import pprint\n",
-    "import gensim\n",
     "import spacy\n",
+    "import pyLDAvis.gensim\n",
+    "import gensim\n",
     "import gensim.corpora as corpora\n",
     "from gensim.utils import simple_preprocess\n",
-    "from wordcloud import WordCloud, STOPWORDS\n",
-    "import matplotlib.colors as mcolors\n",
     "from nltk.corpus import stopwords\n",
-    "import pyLDAvis.gensim\n",
+    "from pprint import pprint\n",
+    "from wordcloud import WordCloud\n",
     "\n",
     "pd.set_option('display.max_colwidth', None)\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# lemmatize, "
+    "%matplotlib inline"
    ]
   },
   {
